MainActivity's respond() method launches Display Activity via Intent.
DisplayActivity's onCreate drops a message in the log it receives from the intent that launched it.

display_activity layout gets built. Simple Linear Layout inside a scrollView for now, with places for all of the required data to land. All xml resources are id tagged for later java associations.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,28 @@
 <resources>
     <string name="app_name">PopularMovies</string>
+    <string name="title_bar">Title Bar</string>
+    <string name="release_date">Release Date</string>
+    <string name="summary_text">
+
+        Temporary text courtesy of the newage bullshit generator.
+
+        This life is nothing short of a blossoming osmosis of joyous balance.
+        Faith is a constant. Purpose is the driver of fulfillment.
+        Our conversations with other beings have led to an unfolding of ultra-archetypal consciousness.
+        How should you navigate this cosmic planet? Have you found your path?
+        The world is calling to you via atomic ionization. Can you hear it?
+        This life is nothing short of a blossoming osmosis of joyous balance.
+        Faith is a constant. Purpose is the driver of fulfillment.
+        Our conversations with other beings have led to an unfolding of ultra-archetypal consciousness.
+        How should you navigate this cosmic planet? Have you found your path?
+        The world is calling to you via atomic ionization. Can you hear it?
+        The biosphere is approaching a tipping point. It is a sign of things to come.
+        The rebirth of potential is now happening worldwide.
+        Although you may not realize it, you are technological.
+        Lifeform, look within and fulfill yourself. It can be difficult to know where to begin.
+        It is time to take inseparability to the next level.
+        This journey never ends. Imagine a redefining of what could be.
+
+
+    </string>
 </resources>
