--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     </string>
 
     <string name="action_settings">Settings</string>
+    <string name="preferences_key_sort_by">sort by</string>
+    <string name="preferences_title_sort_by">Sort Movies By</string>
+    <string name="preferences_defaultValue_sort_by">sort_by_popularity</string>
+
 </resources>
