Database Manager - Commenting updates DisplayActivity -  Comment updates. Log removal DisplayExtras - Comment updates DisplayFragment - Comment Updates. Log removal GridFragment - Comment Updates. Log removal gvCursorAdapter - Comment updates. Placeholder refactor ListViewArrayAdapter - Coment updates. trailer refactor MainActivity - Comment updates. Log removal MovieContentProvider - Comment updates. TMDBContract - Comment updates. ViewHolder - comment updates
blank.jpg - new placeholder image
trailer.png - new movie trailer icon image

display_fragment.xml - alignment tweaks

README updated to reflect new API location.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 API Key instructions:
 
-GridFragment.java contains
+TMDBContract.java contains
 
 final String VALUE_API_KEY = "*** YOUR API KEY GOES HERE ***";
 
